Stubbed out code (broken)
-Demo Controller
- Home page
- RoleDAO, RoleDao impl, UserDAO, userdaoimpl
-Entity foruser and role

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
+#Local Values
+app.datasource.jdbc-url=jdbc:mysql://localhost:3306/spring_security_custom_user_demo?useSSL=false&serverTimezone=UTC
+app.datasource.username=user
+app.datasource.password=password
 
+#Spring Data JPA properties
+spring.data.jpa.repository.packages=com.christian.employeedemoauthjpa.dao
+spring.data.jpa.entity.packages-to-scan=com.christian.employeedemoauthjpa.entity
+
+
+#
+# SECURITY JDBC properties
+#
+#security.datasource.jdbc-url=jdbc:mysql://localhost:3306/spring_security_demo_bcrypt?useSSL=false&serverTimezone=UTC
+#security.datasource.username=user
+#security.datasource.password=password
+
+
+
+#Deployment vals
+#app.datasource.jdbc-url=jdbc:mysql://db-employee-crm.cjvgw8amtiuv.us-east-1.rds.amazonaws.com:3306/web_employee_tracker?useSSL=false&serverTimezone=UTC
+#app.datasource.username=admin
+#app.datasource.password=gsMLYuoJ2sCV
+#server.port=5000
+
+#App info
+info.app.version=0.01
+info.app.name= Employee Manager
+info.app.description= Microservice for managing employees
