--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,11 @@
 			<artifactId>spring-data-rest-core</artifactId>
 			<version>3.4.8</version>
 		</dependency>
-
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
