--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #Local Values
-app.datasource.jdbc-url=jdbc:mysql://localhost:3306/spring_security_custom_user_demo?useSSL=false&serverTimezone=UTC
+app.datasource.jdbc-url=jdbc:mysql://localhost:3306/spring_security_custom_user_demo?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 app.datasource.username=user
 app.datasource.password=password
 
 #Spring Data JPA properties
 spring.data.jpa.repository.packages=com.christian.employeedemoauthjpa.dao
 spring.data.jpa.entity.packages-to-scan=com.christian.employeedemoauthjpa.entity
-
+#spring.datasource.driver=com.mysql.cj.jdbc.Driver
 
 #
 # SECURITY JDBC properties
